--- a/html/index.html
+++ b/html/index.html
@@ -139,7 +139,7 @@
       </tr>
       <tr>
         <td>Governor of the Central Bank</td>
-        <td>Ziad Fariz</td>
+        <td>Adel Al-Sharkas</td>
       </tr>
       <tr>
         <td>Chairman of the Joint Chiefs</td>
