--- a/html/index.html
+++ b/html/index.html
@@ -78,16 +78,12 @@
         <td>Nayef ZakariyaStetieh</td>
       </tr>
       <tr>
-        <td>Minister of of Local Administration</td>
+        <td>Minister of of Local Administration<br />Minister of Political and Parliamentary Affairs</td>
         <td>Tawfiq Kreishan</td>
       </tr>
       <tr>
         <td>Minister of Planning and International Cooperation</td>
         <td>Nasser Shraideh</td>
-      </tr>
-      <tr>
-        <td>Minister of Political and Parliamentary Affairs</td>
-        <td>Musa Maaytah</td>
       </tr>
       <tr>
         <td>Minister of Public Works and Housing</td>
